<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.v4.view.ViewPager
        android:layout_width="wrap_content"
        android:layout_height="500dp"
        app:layout_constraintTop_toTopOf="@+id/my_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/viewPager"/>

    <Button
        android:id="@+id/del"
        android:text="삭제"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        />

    <Button
        android:id="@+id/showDB"
        android:text="DB보기"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/add"
        app:layout_constraintLeft_toRightOf="@+id/del"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        />


    <Button
        android:id="@+id/add"
        android:text="추가요"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/showDB"
        app:layout_constraintRight_toLeftOf="@+id/showMeaning"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_goneMarginRight="10dp"

        />

    <Button
        android:id="@+id/showMeaning"
        android:text="뜻볼래요"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/viewPager"
        app:layout_goneMarginRight="10dp"
        />



</android.support.constraint.ConstraintLayout>